--- a/pong-frontend/index.html
+++ b/pong-frontend/index.html
@@ -6,7 +6,7 @@
 <!-- By: seruiz <seruiz@student.42lyon.fr>          +#+  +:+       +#+       -->
 <!--                                              +#+#+#+#+#+   +#+          -->
 <!-- Created: 2021/09/10 17:11:31 by seruiz            #+#    #+#            -->
-<!-- Updated: 2022/02/04 11:29:03 by seruiz           ###   ########lyon.fr  -->
+<!-- Updated: 2022/02/11 12:18:06 by seruiz           ###   ########lyon.fr  -->
 <!--                                                                         -->
 <!-- *********************************************************************** -->
 
@@ -17,11 +17,23 @@
 	<head>
 		<meta charset="utf-8">
 		<title>pong 3D</title>
-		<style>
+		<!-- <style>
 			body { margin: 0; }
-		</style>
+		</style> -->
+		<link rel="stylesheet" href="styles.css">
 	</head>
-	<body>
+	<body>	
 		<script  type="module" src='./scripts/pong_3d.js'></script>
+
+
+		<div style="width:100%;height:50px;text-align: center; color:white;" class="ui">
+		<button id="test" class="ui">Test</button>
+
+		<select name="spectate" id="spectate-select">
+			<option value="">--Please choose someone to spectate--</option>
+		</select>
+
+		</div>
+
 	</body>
 </html>
