--- a/pong-frontend/index.html
+++ b/pong-frontend/index.html
@@ -6,7 +6,7 @@
 <!-- By: seruiz <seruiz@student.42lyon.fr>          +#+  +:+       +#+       -->
 <!--                                              +#+#+#+#+#+   +#+          -->
 <!-- Created: 2021/09/10 17:11:31 by seruiz            #+#    #+#            -->
-<!-- Updated: 2022/02/16 16:26:07 by seruiz           ###   ########lyon.fr  -->
+<!-- Updated: 2022/02/18 12:39:16 by seruiz           ###   ########lyon.fr  -->
 <!--                                                                         -->
 <!-- *********************************************************************** -->
 
@@ -26,7 +26,7 @@
 		<script  type="module" src='./scripts/pong_3d.js'></script>
 
 
-		<div style="width:100%;height:50px;text-align: center; color:white;" class="ui">
+		<div style="width:100%;height:50px;text-align: center; color:white;" class="ui" id="Ui">
 
 			<div class="spec">
 				<element class="spec_select">
@@ -45,6 +45,8 @@
 				</div>
 				<button class="bonus_match" id="Bonus_Match" class="ui">Join bonus Matchmaking</button>
 			</div>
+
+			<div class="loader" id="loader"></div> 
 
 			<div class="leave_btn">
 				<button class="leave_machmaking" id="Leave_Matchmaking" class="ui">Leave Matchmaking</button>
