--- a/pong-frontend/index.html
+++ b/pong-frontend/index.html
@@ -6,7 +6,7 @@
 <!-- By: seruiz <seruiz@student.42lyon.fr>          +#+  +:+       +#+       -->
 <!--                                              +#+#+#+#+#+   +#+          -->
 <!-- Created: 2021/09/10 17:11:31 by seruiz            #+#    #+#            -->
-<!-- Updated: 2022/02/18 12:39:16 by seruiz           ###   ########lyon.fr  -->
+<!-- Updated: 2022/02/22 15:08:37 by seruiz           ###   ########lyon.fr  -->
 <!--                                                                         -->
 <!-- *********************************************************************** -->
 
@@ -24,6 +24,10 @@
 	</head>
 	<body>	
 		<script  type="module" src='./scripts/pong_3d.js'></script>
+
+		<!-- <div style="width:100%;height:50px;text-align: center; color:white;" class="Leave_ui" id="Leave_Ui"> -->
+		<button class="leave_btn" id="Leave_spec_Btn" class="ui" style="display: none;position: absolute;">Leave spectate mode</button>
+		<!-- </div> -->
 
 
 		<div style="width:100%;height:50px;text-align: center; color:white;" class="ui" id="Ui">
@@ -47,9 +51,8 @@
 			</div>
 
 			<div class="loader" id="loader"></div> 
-
-			<div class="leave_btn">
-				<button class="leave_machmaking" id="Leave_Matchmaking" class="ui">Leave Matchmaking</button>
+				<div class="leave_btn">
+					<button class="leave_machmaking" id="Leave_Matchmaking" class="ui">Leave Matchmaking</button>
 			</div>
 
 
