Matchmaking join_leave fix

--- a/pong-frontend/index.html
+++ b/pong-frontend/index.html
@@ -6,7 +6,7 @@
 <!-- By: seruiz <seruiz@student.42lyon.fr>          +#+  +:+       +#+       -->
 <!--                                              +#+#+#+#+#+   +#+          -->
 <!-- Created: 2021/09/10 17:11:31 by seruiz            #+#    #+#            -->
-<!-- Updated: 2022/02/22 15:08:37 by seruiz           ###   ########lyon.fr  -->
+<!-- Updated: 2022/02/22 15:37:41 by seruiz           ###   ########lyon.fr  -->
 <!--                                                                         -->
 <!-- *********************************************************************** -->
 
@@ -49,10 +49,12 @@
 				</div>
 				<button class="bonus_match" id="Bonus_Match" class="ui">Join bonus Matchmaking</button>
 			</div>
-
-			<div class="loader" id="loader"></div> 
-				<div class="leave_btn">
-					<button class="leave_machmaking" id="Leave_Matchmaking" class="ui">Leave Matchmaking</button>
+			
+			<div id="leave_match" style="display: none;">
+				<div class="loader" id="loader"></div> 
+			<div class="leave_btn">
+				<button class="leave_machmaking" id="Leave_Matchmaking" class="ui">Leave Matchmaking</button>
+			</div>
 			</div>
 
 
