fix already taken nickname

--- a/pong-frontend/index.html
+++ b/pong-frontend/index.html
@@ -6,7 +6,7 @@
 <!-- By: seruiz <seruiz@student.42lyon.fr>          +#+  +:+       +#+       -->
 <!--                                              +#+#+#+#+#+   +#+          -->
 <!-- Created: 2021/09/10 17:11:31 by seruiz            #+#    #+#            -->
-<!-- Updated: 2022/02/22 15:37:41 by seruiz           ###   ########lyon.fr  -->
+<!-- Updated: 2022/02/22 16:10:15 by seruiz           ###   ########lyon.fr  -->
 <!--                                                                         -->
 <!-- *********************************************************************** -->
 
@@ -51,7 +51,7 @@
 			</div>
 			
 			<div id="leave_match" style="display: none;">
-				<div class="loader" id="loader"></div> 
+				<div class="loader" id="loader" style="display: inline-block;"></div> 
 			<div class="leave_btn">
 				<button class="leave_machmaking" id="Leave_Matchmaking" class="ui">Leave Matchmaking</button>
 			</div>
