--- a/pong-frontend/index.html
+++ b/pong-frontend/index.html
@@ -6,7 +6,7 @@
 <!-- By: seruiz <seruiz@student.42lyon.fr>          +#+  +:+       +#+       -->
 <!--                                              +#+#+#+#+#+   +#+          -->
 <!-- Created: 2021/09/10 17:11:31 by seruiz            #+#    #+#            -->
-<!-- Updated: 2022/02/22 16:10:15 by seruiz           ###   ########lyon.fr  -->
+<!-- Updated: 2022/02/23 15:36:29 by seruiz           ###   ########lyon.fr  -->
 <!--                                                                         -->
 <!-- *********************************************************************** -->
 
@@ -17,12 +17,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>pong 3D</title>
+		<link rel="shortcut icon" type="image/jpg" href="./images/favicon.ico"/>
 		<!-- <style>
 			body { margin: 0; }
 		</style> -->
 		<link rel="stylesheet" href="styles.css">
 	</head>
-	<body>	
+	<body>
 		<script  type="module" src='./scripts/pong_3d.js'></script>
 
 		<!-- <div style="width:100%;height:50px;text-align: center; color:white;" class="Leave_ui" id="Leave_Ui"> -->
