--- a/pong-frontend/index.html
+++ b/pong-frontend/index.html
@@ -26,9 +26,17 @@
 	<body>
 		<script  type="module" src='./scripts/pong_3d.js'></script>
 
+
 		<!-- <div style="width:100%;height:50px;text-align: center; color:white;" class="Leave_ui" id="Leave_Ui"> -->
 		<button class="leave_btn" id="Leave_spec_Btn" class="ui" style="display: none;position: absolute;">Leave spectate mode</button>
 		<!-- </div> -->
+
+		<div class="ahref">
+			<a href="https://github.com/Sockona-seruiz/Pong_standalone" class="ui" target="_blank">
+				<img alt="Qries" src="./images/Code_logo.png"
+				width="42" height="42">
+			 </a>
+		</div>
 
 
 		<div style="width:100%;height:50px;text-align: center; color:white;" class="ui" id="Ui">
@@ -39,6 +47,7 @@
 				</element>
 				<button class="launch_spec" id="launch_spec" class="ui">Spectate</button>
 			</div>
+			
 
 			<div class="centre">
 				<input type="text" id="nickname" name="Nickname" value="" placeholder="Your nickname">
@@ -64,5 +73,14 @@
 
 		</div>
 
+		<div class="bottom">
+
+		</div>
 	</body>
+	<!-- <footer>
+		<a href="https://www.qries.com/" class="ui">
+			<img alt="Qries" src="./images/Code_logo.png"
+			width="150" height="150">
+		 </a>
+	</footer> -->
 </html>
